[package]
name = "pulse"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Pulse — Kaleidoscope's first-party metric storage engine. v0 ships the MetricStore trait + an InMemoryMetricStore adapter; the columnar (Arrow + Parquet + DataFusion + Prometheus TSDB block) adapter lands at v1 behind the same trait. OTLP-shaped, per-tenant, gauge + sum number points, time-range and predicate query."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "pulse"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_structured_query"
path = "tests/slice_02_structured_query.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
