[package]
name = "pulse"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Pulse — Kaleidoscope's first-party metric storage engine. v0 ships the MetricStore trait + an InMemoryMetricStore adapter; the columnar (Arrow + Parquet + DataFusion + Prometheus TSDB block) adapter lands at v1 behind the same trait. OTLP-shaped, per-tenant, gauge + sum number points, time-range and predicate query."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "pulse"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
wal-recovery = { path = "../wal-recovery", version = "0.1.0" }

# SCAFFOLD: true — store-fsync-durability-v0 DISTILL (Mandate 7).
# Out-of-process kill-target for the snapshot-atomicity proving test
# (mechanism (a), ADR-0060 §1/C5). pulse is SNAPSHOT-ONLY (its WAL is
# already crash-durable under ADR-0049); this is the only proving
# mechanism it carries. Sets CARGO_BIN_EXE_pulse-crash-target.
[[bin]]
name = "pulse-crash-target"
path = "src/bin/pulse_crash_target.rs"

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_structured_query"
path = "tests/slice_02_structured_query.rs"

[[test]]
name = "v1_slice_01_wal_durability"
path = "tests/v1_slice_01_wal_durability.rs"

[[test]]
name = "v1_slice_02_snapshot"
path = "tests/v1_slice_02_snapshot.rs"

[[test]]
name = "v1_slice_03_fsync_probe"
path = "tests/v1_slice_03_fsync_probe.rs"

[[test]]
name = "v1_slice_04_cardinality_watermark"
path = "tests/v1_slice_04_cardinality_watermark.rs"

[[test]]
name = "v1_slice_05_torn_tail_recovery"
path = "tests/v1_slice_05_torn_tail_recovery.rs"

# store-fsync-durability-v0 slice 07 (pulse). SNAPSHOT-ONLY (mechanism
# (a)): pulse's WAL is already crash-durable under ADR-0049, so it has NO
# wal-fsync AC. RED-ready (#[ignore]d).
[[test]]
name = "v1_slice_06_snapshot_atomicity"
path = "tests/v1_slice_06_snapshot_atomicity.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
