[package]
name = "query-http-common"
version = "0.1.0"
edition.workspace = true
# AGPL-3.0-or-later: consumed only by the three read-side platform crates
# (query-api, log-query-api, trace-query-api), all of which are AGPL.
# The shared scaffolding inherits the platform licence; this crate is
# workspace-internal and is never published.
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Common HTTP scaffolding shared by Kaleidoscope read APIs (caps, time-range parser, error envelope, fail-closed tenant seam). Workspace-internal."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "query_http_common"
path = "src/lib.rs"

[dependencies]
# HTTP types: StatusCode, Response, IntoResponse, Json. Same feature set
# as the three consumer crates so the Response shape composes verbatim.
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "query", "json"] }

# Tenancy vocabulary; the helper returns a borrowed TenantId on the
# Ok arm of resolve_tenant_or_refuse.
aegis = { path = "../aegis", version = "0.1.0" }

# Serialisation for ErrorBody (#[derive(Serialize)]) and the inline JSON
# the error_response helper emits.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
# Async runtime for the body-extraction tests. The Response built by
# `error_response` and `resolve_tenant_or_refuse` is an `axum::Response`
# whose body is read via the async `axum::body::to_bytes`; the inline
# tests use the multi-thread runtime to drive that extraction.
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
