[package]
name = "query-http-common"
version = "0.1.0"
edition.workspace = true
# AGPL-3.0-or-later: consumed only by the three read-side platform crates
# (query-api, log-query-api, trace-query-api), all of which are AGPL.
# The shared scaffolding inherits the platform licence; this crate is
# workspace-internal and is never published.
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Common HTTP scaffolding shared by Kaleidoscope read APIs (caps, time-range parser, error envelope, fail-closed tenant seam). Workspace-internal."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "query_http_common"
path = "src/lib.rs"

[dependencies]
# HTTP types: StatusCode, Response, IntoResponse, Json. Same feature set
# as the three consumer crates so the Response shape composes verbatim.
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "query", "json"] }

# Tenancy vocabulary; the helper returns a borrowed TenantId on the
# Ok arm of resolve_tenant_or_refuse.
aegis = { path = "../aegis", version = "0.1.0" }

# Serialisation for ErrorBody (#[derive(Serialize)]) and the inline JSON
# the error_response helper emits.
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Structured-logging substrate for the shared `init_tracing` helper
# (read-api-tracing-subscriber-v0, DD1/DD2). The helper installs the
# same JSON-to-stderr, env-filtered subscriber aperture uses (ADR-0009),
# keyed off RUST_LOG (DD3). `tracing` is the facade the three read
# binaries already emit against; declared here too because the helper
# body references the subscriber builder. Pinned non-wildcard for cargo
# deny Gate 4; `tracing-subscriber` 0.3.x is already resolved in
# Cargo.lock via aperture, so this edge adds zero transitive resolution.
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "json", "env-filter", "registry"] }

# RFC3339 time-bound parsing (FIX-B.2). The query APIs accept start/end as
# either unix seconds OR RFC3339; `time` provides the standards-compliant
# RFC3339 parser. `time` 0.3.x is already in `Cargo.lock` transitively (via
# jsonwebtoken -> simple_asn1), so this direct edge adds no new external
# crate; only the `parsing` feature is enabled here. Non-wildcard for cargo
# deny Gate 4.
time = { version = "0.3", default-features = false, features = ["parsing"] }

[dev-dependencies]
# Async runtime for the body-extraction tests. The Response built by
# `error_response` and `resolve_tenant_or_refuse` is an `axum::Response`
# whose body is read via the async `axum::body::to_bytes`; the inline
# tests use the multi-thread runtime to drive that extraction.
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }

# In-suite HS256 token minting for the read-auth acceptance suite
# (`tests/slice_07_read_auth_shared.rs`, read-path-query-api-auth-v0). The
# same engine aegis uses to validate; the suite mints tokens signed with
# the test secret for a catalogued test tenant, mirroring aperture's
# `slice_10_ingest_auth*.rs`. Already in `Cargo.lock` (9.x) via aegis, so
# no new external/license/advisory surface enters. Non-wildcard for cargo
# deny Gate 4.
jsonwebtoken = "9"

# Drive the captured-event audit assertions (the 8-reason matrix +
# one-audit-event-per-request) through an in-process `with_default`
# subscriber, mirroring aegis's `slice_03_audit.rs`. `tracing` is already a
# (non-dev) dependency for `init_tracing`; re-listing it here is harmless and
# keeps the dev intent explicit.
tracing = "0.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
