[package]
name = "ray"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Ray — Kaleidoscope's first-party trace storage engine. v0 ships the TraceStore trait + an InMemoryTraceStore adapter; the trace_id-partitioned columnar (Iceberg-on-Parquet) adapter lands at v1 behind the same trait. OTLP-shaped spans, per-tenant, get-trace and service+range query."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "ray"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }

# Shared torn-tail-tolerant WAL replay (ADR-0059). The file-backed
# `open` replays its NDJSON WAL through this routine, recovering the
# intact acked prefix past a single torn final line and staying
# fail-closed for every other parse failure. Workspace-internal leaf
# crate, AGPL-3.0-or-later like ray itself.
wal-recovery = { path = "../wal-recovery", version = "0.1.0" }

# SCAFFOLD: true — store-fsync-durability-v0 DISTILL (Mandate 7).
# Out-of-process kill-target for the snapshot-atomicity proving test
# (mechanism (a), ADR-0060 §1/C5). Sets CARGO_BIN_EXE_ray-crash-target.
[[bin]]
name = "ray-crash-target"
path = "src/bin/ray_crash_target.rs"

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_structured_query"
path = "tests/slice_02_structured_query.rs"

[[test]]
name = "v1_slice_01_wal_durability"
path = "tests/v1_slice_01_wal_durability.rs"

[[test]]
name = "v1_slice_02_snapshot"
path = "tests/v1_slice_02_snapshot.rs"

[[test]]
name = "v1_slice_03_torn_tail_recovery"
path = "tests/v1_slice_03_torn_tail_recovery.rs"

# store-fsync-durability-v0 slice 02 (ray). Two-mechanism durability
# proving, RED-ready (#[ignore]d).
[[test]]
name = "v1_slice_04_crash_durability"
path = "tests/v1_slice_04_crash_durability.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
