[package]
name = "self-observe"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Kaleidoscope self-observability. Bridges that turn one crate's MetricsRecorder events into another crate's metric storage, so Kaleidoscope can observe itself using its own primitives. v0 ships LumenToPulseRecorder; other bridges follow the same pattern. v2 may add a real opentelemetry-otlp bridge for cross-process export."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "self_observe"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }
lumen = { path = "../lumen", version = "0.1.0" }
pulse = { path = "../pulse", version = "0.1.0" }

[[test]]
name = "lumen_to_pulse"
path = "tests/lumen_to_pulse.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
