[package]
name = "sluice"
version = "0.2.0"
edition.workspace = true
license = "AGPL-3.0-or-later"
rust-version.workspace = true
description = "Sluice — Kaleidoscope's queue port. v0 ships the Queue trait + an InMemoryQueue adapter. v1 adds FileBackedQueue with NDJSON WAL durability + snapshot compaction. Kafka / NATS / Redpanda adapters land at v2 behind the same trait. Per-tenant FIFO, at-least-once delivery, bounded capacity, byte-agnostic payload."
repository = "https://github.com/andrealaforgia/kaleidoscope"
publish = false

[lib]
name = "sluice"
path = "src/lib.rs"

[dependencies]
aegis = { path = "../aegis", version = "0.1.0" }
serde = { workspace = true }
serde_json = { workspace = true }
# SCAFFOLD: true — store-fsync-durability-v0 DISTILL (Mandate 7).
# The durability seam (FsyncBackend family + atomic_write_snapshot) is
# extracted into wal-recovery (ADR-0060 §4); sluice re-exports it. DELIVER
# keeps this edge (sluice's `append_wal`/`snapshot` route through it).
wal-recovery = { path = "../wal-recovery", version = "0.1.0" }

# SCAFFOLD: true — out-of-process kill-target for the snapshot-atomicity
# proving test (mechanism (a), ADR-0060 §1/C5). Sets
# CARGO_BIN_EXE_sluice-crash-target.
[[bin]]
name = "sluice-crash-target"
path = "src/bin/sluice_crash_target.rs"

[[test]]
name = "slice_01_walking_skeleton"
path = "tests/slice_01_walking_skeleton.rs"

[[test]]
name = "slice_02_observability"
path = "tests/slice_02_observability.rs"

[[test]]
name = "v1_slice_01_wal_durability"
path = "tests/v1_slice_01_wal_durability.rs"

[[test]]
name = "v1_slice_02_snapshot"
path = "tests/v1_slice_02_snapshot.rs"

# store-fsync-durability-v0 slice 05 (sluice). Two-mechanism durability
# proving, RED-ready (#[ignore]d).
[[test]]
name = "v1_slice_03_crash_durability"
path = "tests/v1_slice_03_crash_durability.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
